--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   iconsax: ^0.0.8
   flutter_staggered_grid_view: ^0.7.0
   supabase_flutter: ^2.9.1
+  infinite_scroll_pagination: ^4.0.0
 
 dev_dependencies:
   flutter_test:
