--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,12 @@ dependencies:
   auto_route: ^10.1.0+1
   google_fonts: ^6.2.1
   flutter_screenutil: ^5.9.3
-  iconsax: ^0.0.8
-  flutter_staggered_grid_view: ^0.7.0
+  # iconsax: ^0.0.8
+  # flutter_staggered_grid_view: ^0.7.0
   supabase_flutter: ^2.9.1
   infinite_scroll_pagination: ^4.0.0
+  get_it: ^8.1.0
+  injectable: ^2.5.1
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +56,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   auto_route_generator: ^10.2.3
+  injectable_generator: ^2.7.0
   build_runner: ^2.5.4
 
 # For information on the generic Dart part of this file, see the
